added initial  vercecl and login route

--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,15 @@
   "description": "express backend for quiz platform",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "philotheephilix",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "mongodb": "^6.9.0"
   }
 }
